// Database Diagram for E-commerce Backend System
// Generated from MongoDB Models
// Use at: https://dbdiagram.io/

Table users {
  _id ObjectId [pk]
  userCode String [unique, not null, note: 'Format: USER001']
  username String [unique, not null]
  email String [unique, not null]
  fullName String [not null]
  passwordHash String [not null]
  role ObjectId [ref: > roles._id, not null]
  department ObjectId [ref: > departments._id]
  isActive Boolean [default: true]
  tokens Json [note: 'Array of auth tokens']
  resetPasswordToken String
  resetPasswordExpire DateTime
  lastLogin DateTime
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    userCode
    username
    email
    isActive
    role
    department
  }
}

Table roles {
  _id ObjectId [pk]
  roleId String [unique, not null, note: 'Uppercase, 2-20 chars']
  roleName String [not null]
  description String
  permissions Json [note: 'Array of permission strings']
  isActive Boolean [default: true]
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    roleId
    isActive
  }
}

Table departments {
  _id ObjectId [pk]
  departmentId String [unique, not null, note: 'Uppercase, 2-20 chars']
  departmentName String [not null]
  description String
  manager ObjectId [ref: > users._id]
  location String
  phone String [note: '10-15 digits']
  email String
  isActive Boolean [default: true]
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    departmentId
    isActive
    manager
  }
}

Table categories {
  _id ObjectId [pk]
  name String [unique, not null]
  slug String [unique]
  image String [note: 'Category image URL']
  description String
  parent ObjectId [ref: > categories._id, note: 'For nested categories']
  order Integer [default: 0]
  isActive Boolean [default: true]
  createdAt DateTime
  updatedAt DateTime
}

Table products {
  _id ObjectId [pk]
  name String [not null]
  slug String [unique]
  sku String [unique, not null, note: 'Uppercase']
  category ObjectId [ref: > categories._id, not null]
  costPrice Decimal [not null, default: 0]
  price Decimal [not null]
  originalPrice Decimal
  image String [not null, note: 'Main image URL']
  images Json [note: 'Array of image URLs']
  description String
  detailDescription Json [note: 'Contains intro, specs, packaging, etc']
  vendor String [not null]
  stock Integer [not null, default: 0]
  isInStock Boolean
  rating Decimal [default: 0, note: '0-5']
  reviewCount Integer [default: 0]
  type String [note: 'Organic, Regular, etc']
  tags Json [note: 'Array of strings']
  mfgDate DateTime [note: 'Manufacturing date']
  shelfLife String
  isActive Boolean [default: true]
  isFeatured Boolean [default: false]
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    (category, price)
    sku
  }
}

  Table inventory {
    _id ObjectId [pk]
    product ObjectId [unique, ref: - products._id, not null]
    quantityOnHand Integer [default: 0]
    quantityReserved Integer [default: 0]
    quantityAvailable Integer [default: 0, note: 'Computed: onHand - reserved']
    reorderPoint Integer [default: 10]
    warehouseLocation String
    createdAt DateTime
    updatedAt DateTime
    
    Indexes {
      product
      quantityAvailable
    }
  }

  Table inventoryMovements {
    _id ObjectId [pk]
    movementNumber String [unique, not null, note: 'Auto-generated movement ID']

    product ObjectId [ref: > products._id, not null]
    inventory ObjectId [ref: > inventory._id, not null]
    purchaseOrderId ObjectId [ref: > purchase_orders._id, note: 'Reference to purchase order if applicable, nullable']

    movementType String [not null, note: 'Allowed values: in, out, adjustment, reserved, released']
    quantity Integer [not null]
    reason String [note: 'Reason for inventory movement, e.g., restock, damage, audit']


    date DateTime [default: `now()`, not null]
    performedBy ObjectId [ref: > users._id]

    notes String
    createdAt DateTime
    updatedAt DateTime

    Indexes {
      movementNumber
      (product, date)
      (inventory, date)
      movementType
      purchaseOrderId
    }
  }




Table customers {
  _id ObjectId [pk]
  customerCode String [unique, note: 'Auto-gen: CUST2025000001']
  fullName String [not null]
  email String [unique]
  phone String [not null]
  address Json [note: 'street, city, state, zipCode, country']
  dateOfBirth DateTime
  gender String [note: 'male, female, other']
  customerType String [default: 'retail', note: 'retail, wholesale, vip']
  loyaltyPoints Integer [default: 0]
  totalPurchases Integer [default: 0]
  totalSpent Decimal [default: 0]
  notes String
  isActive Boolean [default: true]
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    customerCode
    email
    phone
    customerType
    isActive
  }
}

Table orders {
  _id ObjectId [pk]
  orderNumber String [unique, note: 'Auto-gen: ORD2501000001']
  customer Json [not null, note: 'Embedded: name, email, phone']
  user ObjectId [ref: > users._id]
  deliveryType String [default: 'delivery', note: 'delivery, pickup']
  shippingAddress Json [note: 'street, city, state, zipCode, country']
  items Json [not null, note: 'Array of order items with product ref']
  subtotal Decimal [not null]
  shippingFee Decimal [default: 0]
  tax Decimal [default: 0]
  discount Decimal [default: 0]
  discountType String [default: 'none', note: 'none, retail, wholesale, vip']
  discountPercentage Decimal [default: 0]
  total Decimal [not null]
  paymentMethod String [default: 'cash', note: 'cash, card, bank_transfer, e_wallet']
  paymentStatus String [default: 'pending', note: 'pending, paid, failed, refunded']
  paidAt DateTime
  status String [default: 'pending', note: 'pending, processing, shipping, delivered, cancelled']
  trackingNumber String
  processingAt DateTime
  shippedAt DateTime
  deliveredAt DateTime
  cancelledAt DateTime
  customerNote String
  adminNote String
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    orderNumber
    (user, createdAt)
    status
  }
}

Table suppliers {
  _id ObjectId [pk]
  supplierCode String [unique, note: 'Auto-gen: SUP2025000001']
  companyName String [not null]
  contactPerson Json [note: 'name, position, phone, email']
  email String [unique, not null]
  phone String [not null]
  address Json [note: 'street, city, state, zipCode, country']
  taxId String [unique]
  bankAccount Json [note: 'bankName, accountNumber, accountName, swiftCode']
  paymentTerms String [default: 'net30', note: 'cod, net15, net30, net60, net90']
  creditLimit Decimal [default: 0]
  currentDebt Decimal [default: 0]
  productsSupplied Json [note: 'Array of Product ObjectIds']
  rating Decimal [default: 0, note: '0-5']
  totalPurchaseOrders Integer [default: 0]
  totalPurchaseAmount Decimal [default: 0]
  notes String
  isActive Boolean [default: true]
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    supplierCode
    email
    isActive
  }
}

Table purchase_orders {
  _id ObjectId [pk]
  poNumber String [unique, note: 'Auto-gen: PO2025000001']
  supplier ObjectId [ref: > suppliers._id, not null]
  orderDate DateTime [default: `now()`]
  expectedDeliveryDate DateTime
  subtotal Decimal [default: 0]
  shippingFee Decimal [default: 0]
  discountPercentage Decimal [default: 0]
  total Decimal [default: 0]
  status String [default: 'pending', note: 'pending, approved, received, cancelled']
  paymentStatus String [default: 'unpaid', note: 'unpaid, partial, paid']
  notes String
  createdBy ObjectId [ref: > users._id]
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    poNumber
    supplier
    status
    paymentStatus
  }
}

Table detail_purchase_orders {
  _id ObjectId [pk]
  purchaseOrder ObjectId [ref: > purchase_orders._id, not null]
  product ObjectId [ref: > products._id, not null]
  quantity Integer [not null]
  unitPrice Decimal [not null]
  discount Decimal [default: 0]
  totalPrice Decimal [not null, note: 'Quantity * UnitPrice - Discount']
  createdAt DateTime
  updatedAt DateTime

  Indexes {
    purchaseOrder
    product
  }
}


Table payments {
  _id ObjectId [pk]
  paymentNumber String [unique, note: 'Auto-gen: PAY2025000001']
  paymentType String [not null, note: 'sales, purchase']
  relatedOrderId ObjectId [not null, note: 'Order or PurchaseOrder _id']
  relatedOrderNumber String [note: 'Cached order/PO number']
  amount Decimal [not null]
  paymentMethod String [not null, note: 'cash, card, bank_transfer, e_wallet, check, credit']
  paymentDate DateTime [default: `now()`]
  transactionId String
  bankReference String
  cardLastFourDigits String
  status String [default: 'completed', note: 'pending, completed, failed, refunded, cancelled']
  refundedAmount Decimal [default: 0]
  refundReason String
  refundedAt DateTime
  customer ObjectId [ref: > customers._id, note: 'For sales payments']
  supplier ObjectId [ref: > suppliers._id, note: 'For purchase payments']
  receivedBy ObjectId [ref: > users._id, not null]
  notes String
  createdAt DateTime
  updatedAt DateTime
  
  Indexes {
    paymentNumber
    paymentType
    status
    paymentDate
    customer
    supplier
  }
}

// Relationships Description
// =========================

// Users & Authentication
// - users belong to one role (many-to-one)
// - users belong to one department (many-to-one)
// - departments have one manager (user) (one-to-one)

// Product Catalog
// - products belong to one category (many-to-one)
// - categories can have parent category (self-referencing)
// - products have one inventory record (one-to-one)

// Sales & Orders
// - orders reference user (many-to-one, optional)
// - orders contain embedded customer info
// - orders have embedded items with product references

// Suppliers & Purchasing
// - purchase_orders belong to one supplier (many-to-one)
// - purchase_orders reference users for created/approved/received
// - suppliers have array of product references

// Payments
// - payments reference orders or purchase_orders via relatedOrderId
// - payments reference customer (for sales) or supplier (for purchases)
// - payments reference user who received payment

// Notes:
// - ObjectId references are implemented via Mongoose refs
// - Embedded documents (Json type) contain nested objects/arrays
// - Many arrays store embedded subdocuments rather than references
// - Auto-generated codes use pre-save hooks
// - Virtuals and computed fields not shown in schema


Ref: "orders"."discount" < "orders"."tax"